force-app/main/default/objects/OpportunityProductServiceQuote__c/OpportunityProductServiceQuote__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product Service Quote</label>
    <nameField>
        <label>Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Product Service Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>