force-app/main/default/objects/OpportunityProductServiceQuote__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunity Product Service Quotes (Product)</relationshipLabel>
    <relationshipName>OpportunityProductProduct</relationshipName>
    <type>Lookup</type>
</CustomField>