force-app/main/default/objects/OpportunityProductServiceQuote__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product Service Quotes</relationshipLabel>
    <relationshipName>OpportunityProductProduct</relationshipName>
    <type>Lookup</type>
</CustomField>