force-app/main/default/objects/OpportunityProductServiceQuote__c/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunity Product Service Quotes</relationshipLabel>
    <relationshipName>OpportunityProductService</relationshipName>
    <type>Lookup</type>
</CustomField>