force-app/main/default/objects/OpportunityProductServiceQuote__c/fields/ServiceQuoteId__c.field-meta.xml
<CustomField>
    <fullName>ServiceQuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Opportunity Product Service Quotes</relationshipLabel>
    <relationshipName>OpportunityProductServiceQuote</relationshipName>
    <type>Lookup</type>
</CustomField>